--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -182,7 +182,7 @@
                 </div>
 
                 <div class="add-place-button action-button action-button-a">
-                    Add Your Location
+                    Add Your Project
                 </div>
 
             </div>
