--- a/growing_cities/templates/growing_places/growingplace_form.html
+++ b/growing_cities/templates/growing_places/growingplace_form.html
@@ -12,7 +12,7 @@
         {{ form.location }}
     </div>
 
-    <div class="map-drawer-section">
+    <div class="add-place-activities map-drawer-section">
         <h3>{{ form.activities.label_tag }}</h3>
         {{ form.activities.errors }}
         {{ form.activities }}
