--- a/growing_cities/templates/growing_places/growingplace_form.html
+++ b/growing_cities/templates/growing_places/growingplace_form.html
@@ -42,7 +42,11 @@
         {{ form.photo }}
     </div>
 
-    <a class="add-place-cancel-button">cancel</a>
+    <button class="add-place-cancel-button action-button action-button-a" type="button">
+        cancel
+    </button>
 
-    <input class="add-place-save-button action-button" type="submit" value="Add My Location" />
+    <button class="add-place-save-button action-button action-button-b" type="submit">
+        Add My Location
+    </button>
 </form>
