--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -138,9 +138,9 @@
 
     {% if buy_button %}
     <div id="buy-button">
-        <a class="buy-button-inner" href="{{ buy_button.url }}">
+        <button class="buy-button-inner action-button action-button-b" href="{{ buy_button.url }}">
             {{ buy_button.text }}
-        </a>
+        </button>
         {% if "buttons.change_button" in perms %}
         <a class="admin-only edit-link no-ajax" href="{% url "admin:buttons_button_change" buy_button.pk %}">edit this button</a>
         {% endif %}
@@ -181,9 +181,9 @@
                     <ul id="map-results"></ul>           
                 </div>
 
-                <div class="add-place-button action-button action-button-a">
+                <button class="add-place-button action-button action-button-a" type="button">
                     Add Your Project
-                </div>
+                </button>
 
             </div>
             <div id="map-drawer-add-pane" class="ajax-form-wrapper" data-form-url="{% url "gcplace_place_add" %}"></div>
