--- a/growing_cities/templates/growing_places/growingplace_add_success.html
+++ b/growing_cities/templates/growing_places/growingplace_add_success.html
@@ -6,5 +6,7 @@
         Your location has been submitted and will appear on the map once a 
         moderator has the opportunity to look at it.
     </p>
-    <a class="add-place-success-button">back</a>
+    <button class="add-place-success-button action-button action-button-a" type="button">
+        back
+    </button>
 </div>
