--- a/growing_cities/templates/stories/story_form.html
+++ b/growing_cities/templates/stories/story_form.html
@@ -27,7 +27,7 @@
                 <div class="image-input-wrapper">
                     {{ form.image }}
                     <div class="image-input-overlay">
-                        <div class="image-input-button">Choose File</div>
+                        <button class="image-input-button">Choose File</button>
                         <div class="image-input-selected-file"></div>
                     </div>
                 </div>
