loading indicator for results

--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -176,7 +176,8 @@
                     </select>
                 </div>
 
-                <div class="map-drawer-section">
+                <div class="map-drawer-section map-results-container">
+                    <div class="loading-indicator"></div>
                     <h3>Results:</h3>
                     <ul id="map-results"></ul>           
                 </div>
