--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -447,6 +447,16 @@ body.loading .loading-indicator {
 
 
 /* Map results (in sidebar) */
+.map-results-container.loading .loading-indicator {
+    background: url(/static/img/loading_small_map_drawer.gif);
+    display: block;
+    float: right;
+    margin-top: -10px;
+    position: relative;
+    height: 32px;
+    width: 32px;
+}
+
 .map-result {
     border-bottom: 1px solid gray;
     cursor: pointer;
