--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -165,6 +165,39 @@ h1 {
 }
 
 
+.grid-table {
+    display: table;
+    width: 100%;
+}
+
+.grid-cell {
+    border-bottom: 1px solid #D5D3C7;
+    border-right: 1px solid #D5D3C7;
+    display: table-cell;
+    float: none;
+    padding: 20px;
+    text-align: center;
+}
+.grid-cell.right {
+    border-right: 0;
+}
+
+.grid-row {
+    display: table-row;
+}
+
+.grid-row:last-child .grid-cell {
+    border-bottom: 0;
+}
+
+@media (max-width: 768px) {
+    .grid-cell {
+        border-right: 0;
+        float: left;
+    }
+}
+
+
 /*
  * _modules_
  */
@@ -757,31 +790,6 @@ ul.story-list li {
 .story-submit .lead-in {
     margin-bottom: 75px;
 }
-
-.book,
-.partner,
-.product {
-    border-right: 1px solid #D5D3C7;
-    padding: 20px;
-    text-align: center;
-}
-.book.right,
-.partner.right,
-.product.right {
-    border-right: 0;
-}
-
-.book-row,
-.partner-row,
-.product-row {
-    border-top: 1px solid #D5D3C7;
-}
-.book-row.count-1,
-.partner-row.count-1,
-.product-row.count-1 {
-    border-top: 0;
-}
-
 
 /* Screenings page */
 .screening-location {
