--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -37,8 +37,8 @@
     <div class="clear"></div>
 </div>
 
-<h3>Books</h3>
-<div class="learn books">
+<div class="content-section learn books">
+    <h3>Books</h3>
     {% if 'add_book' in perms %}
     <a href="{% url "admin:books_book_add" %}" class="no-ajax">
         add book
