--- a/growing_cities/templates/pages/shop.html
+++ b/growing_cities/templates/pages/shop.html
@@ -13,28 +13,12 @@
     </div>
 
     <div class="product-list-wrapper">
-        <div class="product-list">
-        {% for product in products %}
-            {% cycle 'left' 'middle' 'right' as position silent %}
-            {% if position == 'left' %}
-            <div class="product-row count-{{ forloop.counter }} match-row-heights">
-            {% endif %}
-                <div class="product grid grid-1-3 {{ position }} match-row-height">
-                    {% include "products/_product_detail.html" %}
-                </div>
-            {% if position == 'right' %}
-                <div class="clear"></div>
-            </div>
-            {% endif %}
-        {% endfor %}
-        </div>
-        <div class="clear"></div>
         {% if 'add_product' in perms %}
         <a href="{% url "admin:products_product_add" %}" class="no-ajax">
             add product
         </a>
         {% endif %}
-        <div class="clear"></div>
+        {% include "products/_product_list.html" %}
     </div>
 
     <div class="shopCart">
