--- a/growing_cities/templates/products/_product_list.html
+++ b/growing_cities/templates/products/_product_list.html
@@ -1,13 +1,13 @@
-<div class="book-list grid-table">
-    {% for book in books %}
+<div class="product-list grid-table">
+    {% for product in products %}
         {% cycle 'left' 'middle' 'right' as position silent %}
 
         {% if position == 'left' %}
         <div class="grid-row count-{{ forloop.counter }}">
         {% endif %}
 
-            <div class="grid-cell grid grid-1-3 {{ position }}">
-                {% include "books/_book_detail.html" %}
+            <div class="grid-cell grid {{ position }} grid-1-3">
+                {% include "products/_product_detail.html" %}
             </div>
 
         {% if position == 'right' %}
