--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -135,6 +135,7 @@ h1 {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     float: left;
+    vertical-align: top;
     width: 100%;
 }
 
