--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -49,7 +49,12 @@
 
 <h3>How-tos</h3>
 <div class="learn how-tos">
-    {% show_page_content "how-tos" %}
+    {% if 'add_howto' in perms %}
+    <a href="{% url "admin:howtos_howto_add" %}" class="no-ajax">
+        add how-to
+    </a>
+    {% endif %}
+    {% include "howtos/_howto_list.html" %}
 </div>
 
 <h3>Links</h3>
