--- a/growing_cities/templates/pages/news.html
+++ b/growing_cities/templates/pages/news.html
@@ -1,5 +1,5 @@
 {% extends "pages/base.html" %}
-{% load cache fiber_tags news_tags rsssync_tags twittersync_tags %}
+{% load cache fiber_tags rsssync_tags twittersync_tags %}
 
 {% block page_content %}
 <div class="news lead-in">
@@ -39,7 +39,7 @@
             <ul class="tweets">
                 {% for tweet in tweets %}
                 <li class="tweet">
-                    <div class="tweet-content">{{ tweet.content|urlize|make_links_target_blank|safe }}</div>
+                    <div class="tweet-content">{{ tweet.content|urlize|safe }}</div>
                     at <a class="twitter-date" href="{{ tweet.url }}" target="_blank">{{ tweet.created_date }}</a>
                 </li>
                 {% endfor %}
@@ -57,7 +57,7 @@
                     {{ entry.title }}
                 </a>
                 <div class="meta wordpress-date">{{ entry.date|date:"F j, Y" }}</div>
-                <div class="wordpress-summary">{{ entry.summary|make_links_target_blank|safe }}</div>
+                <div class="wordpress-summary">{{ entry.summary|safe }}</div>
             </li>
             {% endfor %}
         </ul>
