--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -782,10 +782,9 @@ input[type="file"] {
     width: 250px;
 }
 
-ul.story-list li {
-    height: 175px;
+.story-list .grid-cell {
+    border: 0;
     overflow-x: auto;
-    overflow-y: auto;
     padding: 15px;
 }
 
