--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -9,6 +9,7 @@
     {% compress css %}
 	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
 	<link rel="stylesheet" href="{{ STATIC_URL }}js/lib/chosen/chosen.css">
+	<link rel="stylesheet" href="{{ STATIC_URL }}js/lib/jcarousel/skin.css">
     {% endcompress %}
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -52,6 +53,9 @@
     {% endif %}
     <script defer src="{{ STATIC_URL }}js/lib/jquery.placeholder.js"></script>  
     <script defer src="{{ STATIC_URL }}js/lib/jquery.smartresize.js"></script>  
+
+    <script src="{{ STATIC_URL }}js/lib/jcarousel/jquery.jcarousel.js"></script>
+
     <script src="{{ STATIC_URL }}js/lib/jquery.waypoints.min.js"></script>
     <script src="{{ STATIC_URL }}js/lib/jquery.waypoints-sticky.min.js"></script>
 
