--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -7,9 +7,8 @@
 </div>
 
 <h3 style="display: none;">Stories</h3>
-<div class="story-list-wrapper">
-    {% include "stories/_story_list.html" %}
-</div>
+<ul id="story-list-carousel" class="story-list-wrapper jcarousel-skin-growingcities" data-list-url="{% url "stories:story_list" %}" data-list-pages="{{ story_pages }}">
+</ul>
 
 <div class="story-submit">
 
