--- a/growing_cities/templates/content_page.html
+++ b/growing_cities/templates/content_page.html
@@ -7,6 +7,8 @@
 
     {% include "_submenu.html" %}
 
-    {% show_page_content "main" %}
+    <div class="article-content">
+        {% show_page_content "main" %}
+    </div>
 </div>
 {% endblock %}
