--- a/growing_cities/templates/team/_teammember_list.html
+++ b/growing_cities/templates/team/_teammember_list.html
@@ -6,7 +6,7 @@
         <div class="grid-row count-{{ forloop.counter }}">
         {% endif %}
 
-            <div class="grid-cell grid grid-1-2 {{ position }}">
+            <div class="grid-cell grid grid-1-2 {{ position }} teammember-cell">
                 {% include "team/_teammember_detail.html" %}
             </div>
 
