--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -56,6 +56,13 @@ h1 {
     font-weight: normal;
 }
 
+input[type="text"],
+select,
+textarea {
+    border: 0;
+    font-family: "Bookman Regular", serif;
+}
+
 
 /* Clearfix boilerplate */
 
