--- a/growing_cities/templates/pages/screenings.html
+++ b/growing_cities/templates/pages/screenings.html
@@ -49,7 +49,9 @@
 
 <div class="host-screening lead-in">
     {% show_page_content "host-screening-lead-in" %}
-    <a class="host-screening-form-show action-button action-button-a">Host a screening</a>
+    <button class="host-screening-form-show action-button action-button-a" type="button">
+        Host a screening
+    </button>
 </div>
 <div class="host-screening-instructions">
     <div class="host-screening-instructions-text">
