--- a/growing_cities/templates/contact_form/form.html
+++ b/growing_cities/templates/contact_form/form.html
@@ -15,6 +15,5 @@
     <div>
         {{ form.body.label_tag }} {{ form.body }}
     </div>
-    <input type="submit" value="Send" />
-    <div class="loading"></div>
+    <button class="action-button action-button-submit" type="submit">Submit</button>
 </form>
