--- a/growing_cities/templates/screenings/host_screening_form.html
+++ b/growing_cities/templates/screenings/host_screening_form.html
@@ -93,6 +93,5 @@
         </div>
     </div>
 
-    <input type="submit" value="Add your screening" />
-    <div class="loading"></div>
+    <button class="action-button action-button-submit" type="submit">Submit</button>
 </form>
