--- a/growing_cities/static/js/lib/jcarousel/skin.css
+++ b/growing_cities/static/js/lib/jcarousel/skin.css
@@ -2,8 +2,8 @@
 }
 
 .jcarousel-skin-growingcities .jcarousel-container-horizontal {
-    padding-left: 50px;
-    padding-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
     width: 800px;
 }
 
@@ -13,12 +13,12 @@
 }
 
 .jcarousel-skin-growingcities .jcarousel-clip-horizontal {
-    height: 400px;
+    height: 370px;
 }
 
 .jcarousel-skin-growingcities .jcarousel-item {
     width: 800px;
-    height: 400px;
+    height: 370px;
 }
 
 .jcarousel-skin-growingcities .jcarousel-item-horizontal {
@@ -32,56 +32,41 @@
 /**
  *  Horizontal Buttons
  */
-.jcarousel-skin-growingcities .jcarousel-next-horizontal {
-    position: absolute;
-    top: 150px;
-    right: 5px;
-    width: 32px;
-    height: 32px;
+.jcarousel-skin-growingcities .jcarousel-next-horizontal,
+.jcarousel-skin-growingcities .jcarousel-prev-horizontal {
     cursor: pointer;
-    background: transparent url(next-horizontal.png) no-repeat 0 0;
+    font-family: "Acier BAT Text Solid", Futura, Arial, sans-serif;
+    font-size: 32px;
+}
+
+.jcarousel-skin-growingcities .jcarousel-next-horizontal {
+    float: right;
+}
+
+.jcarousel-skin-growingcities .jcarousel-prev-horizontal {
+    float: left;
 }
 
 .jcarousel-skin-growingcities .jcarousel-next-horizontal:hover,
-.jcarousel-skin-growingcities .jcarousel-next-horizontal:focus {
-    background-position: -32px 0;
+.jcarousel-skin-growingcities .jcarousel-next-horizontal:focus,
+.jcarousel-skin-growingcities .jcarousel-prev-horizontal:hover, 
+.jcarousel-skin-growingcities .jcarousel-prev-horizontal:focus {
+    color: #3e3e2e;
 }
 
-.jcarousel-skin-growingcities .jcarousel-next-horizontal:active {
-    background-position: -64px 0;
+.jcarousel-skin-growingcities .jcarousel-next-horizontal:active,
+.jcarousel-skin-growingcities .jcarousel-prev-horizontal:active {
+    color: #3e3e2e;
 }
 
 .jcarousel-skin-growingcities .jcarousel-next-disabled-horizontal,
 .jcarousel-skin-growingcities .jcarousel-next-disabled-horizontal:hover,
 .jcarousel-skin-growingcities .jcarousel-next-disabled-horizontal:focus,
-.jcarousel-skin-growingcities .jcarousel-next-disabled-horizontal:active {
-    cursor: default;
-    background-position: -96px 0;
-}
-
-.jcarousel-skin-growingcities .jcarousel-prev-horizontal {
-    position: absolute;
-    top: 150px;
-    left: 5px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(prev-horizontal.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-growingcities .jcarousel-prev-horizontal:hover, 
-.jcarousel-skin-growingcities .jcarousel-prev-horizontal:focus {
-    background-position: -32px 0;
-}
-
-.jcarousel-skin-growingcities .jcarousel-prev-horizontal:active {
-    background-position: -64px 0;
-}
-
+.jcarousel-skin-growingcities .jcarousel-next-disabled-horizontal:active,
 .jcarousel-skin-growingcities .jcarousel-prev-disabled-horizontal,
 .jcarousel-skin-growingcities .jcarousel-prev-disabled-horizontal:hover,
 .jcarousel-skin-growingcities .jcarousel-prev-disabled-horizontal:focus,
 .jcarousel-skin-growingcities .jcarousel-prev-disabled-horizontal:active {
     cursor: default;
-    background-position: -96px 0;
+    color: #D5D3C7;
 }
