--- a/growing_cities/templates/pages/learn.html
+++ b/growing_cities/templates/pages/learn.html
@@ -7,8 +7,11 @@
 </div>
 
 <h3 style="display: none;">Stories</h3>
-<ul id="story-list-carousel" class="story-list-wrapper jcarousel-skin-growingcities" data-list-url="{% url "stories:story_list" %}" data-list-pages="{{ story_pages }}">
-</ul>
+<div>
+    <ul id="story-list-carousel" class="story-list-wrapper jcarousel-skin-growingcities" data-list-url="{% url "stories:story_list" %}" data-list-pages="{{ story_pages }}">
+    </ul>
+    <div class="clear"></div>
+</div>
 
 <div class="story-submit">
 
