--- a/growing_cities/templates/stories/_story_detail.html
+++ b/growing_cities/templates/stories/_story_detail.html
@@ -8,5 +8,8 @@
     </a>
 {% else %}
     <p>{{ story.title }}</p>
-    <a href="{{ story.get_absolute_url }}">read more</a>
 {% endif %}
+
+<div class="story-detail-permalink meta">
+    <a href="{{ story.get_absolute_url }}">read more &raquo;</a>
+</div>
