add location form gives more feedback

--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -608,6 +608,11 @@ body.loading .loading-indicator {
     width: 100%;
 }
 
+#add-place-form.submitting {
+    opacity: .5;
+    filter: alpha(opacity=.5);
+}
+
 
 /* Main menu */
 #mainmenu li {
