--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -874,6 +874,7 @@ input[type="file"] {
 }
 
 .host-screening-form-show {
+    margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
 }
