--- a/growing_cities/static/css/base.css
+++ b/growing_cities/static/css/base.css
@@ -962,6 +962,10 @@ input[type="file"] {
     padding: 5px;
 }
 
+.news-signup input[type="submit"] {
+    margin-top: 5px;
+}
+
 .twitter-date {
     font-family: Courier, "Lucida Console", monospace;
     font-size: 12px;
