--- a/growing_cities/templates/base.html
+++ b/growing_cities/templates/base.html
@@ -23,6 +23,8 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 
     {% compress js %}
+    <script src="{{ STATIC_URL }}js/lib/handlebars/handlebars.runtime.js"></script>
+    <script src="{{ STATIC_URL }}js/handlebars-templates.js"></script>
     <script src="{{ STATIC_URL }}js/lib/jquery.scrollto.min.js"></script>
     <script type="text/javascript">
     WebFontConfig = { fontdeck: { id: '30649' } };
@@ -182,7 +184,7 @@
                 </div>
 
                 <div class="map-drawer-section map-results-container">
-                    <div class="loading-indicator"></div>
+                    <div class="map-results-loading-indicator"></div>
                     <h3>Results:</h3>
                     <ul id="map-results"></ul>           
                 </div>
